cabal-version:
  >= 2.0
name:
  rio-effect
version:
  0.1.0.0
license:
  BSD3
license-file:
  LICENSE
author:
  Oliver Charles
maintainer:
  ollie@ocharles.org.uk
category:
  Control
build-type:
  Simple
extra-source-files:
  ChangeLog.md

library
  exposed-modules:
    RIO.Effect
    RIO.Effect.TH
  other-modules:
    RIO.Effect.AllOf
    RIO.Effect.EFF
    RIO.Effect.Handles
    RIO.Effect.Handler
    RIO.Effect.Lift
  build-depends:
    base ^>= 4.10 || ^>= 4.11,
    rio,
    transformers ^>= 0.5,
    singleton-bool ^>= 0.1,
    template-haskell
  default-language:
    Haskell2010
  hs-source-dirs:
    src
